adicionado requisições na pagina login e cadastro

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AutoElite - Concessionária Premium</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="/pages/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         </nav>
         <div class="header-buttons">
             <a href="#" class="btn btn-outline">Agendar Test Drive</a>
-            <a href="#" class="btn btn-secondary">Login</a>
+            <a href="/pages/autenticacao.html" class="btn btn-secondary">Login</a>
             <a href="#" class="btn btn-primary">Cadastrar</a>
         </div>
     </div>
@@ -87,7 +87,7 @@
                         <option value="500000">R$ 500.000</option>
                     </select>
                 </div>
-                <button class="btn btn-primary">Buscar</button>
+                <button id="btnBuscar" class="btn btn-primary">Buscar</button>
             </div>
         </div>
     </div>
@@ -423,5 +423,6 @@
         </div>
     </div>
 </footer>
+<script src="/pages/filtro_carros.js" ></script>
 </body>
 </html>
