adicionei fotos e arrumei a pagina veiculos

--- a/pages/index.html
+++ b/pages/index.html
@@ -104,7 +104,7 @@
             <div class="car-card">
                 <div class="car-image">
                     <span class="tag">Novo</span>
-                    <img src="https://cdn.motor1.com/images/mgl/P33JGl/s3/2022-mercedes-amg-sl.jpg" alt="Mercedes-Benz SL">
+                    <img src="/fotos/Mercedes-Benz SL.webp" alt="Mercedes-Benz SL">
                 </div>
                 <div class="car-details">
                     <h3>Mercedes-Benz SL</h3>
@@ -123,7 +123,7 @@
             <div class="car-card">
                 <div class="car-image">
                     <span class="tag tag-offer">Oferta</span>
-                    <img src="https://cdn.motor1.com/images/mgl/BYwRJ/s3/bmw-x3-2022.jpg" alt="BMW X3">
+                    <img src="/fotos/BMW-X3-.webp" alt="BMW X3">
                 </div>
                 <div class="car-details">
                     <h3>BMW X3</h3>
@@ -141,7 +141,7 @@
             
             <div class="car-card">
                 <div class="car-image">
-                    <img src="https://cdn.motor1.com/images/mgl/kEKjA/s3/volkswagen-golf-gti-2021.jpg" alt="Volkswagen Golf GTI">
+                    <img src="/fotos/Volkswagen Golf GTI.webp" alt="Volkswagen Golf GTI">
                 </div>
                 <div class="car-details">
                     <h3>Volkswagen Golf GTI</h3>
@@ -160,7 +160,7 @@
             <div class="car-card">
                 <div class="car-image">
                     <span class="tag tag-sold">Vendido</span>
-                    <img src="https://cdn.motor1.com/images/mgl/mrLJnA/s3/toyota-corolla-cross-2023.jpg" alt="Toyota Corolla Cross">
+                    <img src="/fotos/Toyota Corolla Cross.jpg" alt="Toyota Corolla Cross">
                 </div>
                 <div class="car-details">
                     <h3>Toyota Corolla Cross</h3>
@@ -178,7 +178,7 @@
             
             <div class="car-card">
                 <div class="car-image">
-                    <img src="https://cdn.motor1.com/images/mgl/6ZZvv/s1/honda-civic-2022.jpg" alt="Honda Civic">
+                    <img src="/fotos/Honda Civic 22.jpg" alt="Honda Civic">
                 </div>
                 <div class="car-details">
                     <h3>Honda Civic</h3>
@@ -197,7 +197,7 @@
             <div class="car-card">
                 <div class="car-image">
                     <span class="tag tag-offer">Oferta</span>
-                    <img src="https://cdn.motor1.com/images/mgl/2NLzP/s1/chevrolet-s10-2023.jpg" alt="Chevrolet S10">
+                    <img src="/fotos/Chevrolet S10.jpg" alt="Chevrolet S10">
                 </div>
                 <div class="car-details">
                     <h3>Chevrolet S10</h3>
