mais imgs colocadas

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
 <header>
     <div class="container">
         <div class="logo">
-            <h1>Auto<span>Elite</span></h1>
+            <img src="/fotos/Captura de tela 2025-03-22 135902.png" alt="Logo">
         </div>
         <nav>
             <ul>
