--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -393,7 +393,7 @@
                 <div class="car-card">
                     <div class="car-image">
                         <span class="tag">Novo</span>
-                        <img src="https://cdn.motor1.com/images/mgl/JOZeA/s3/audi-rs-e-tron-gt.jpg" alt="Audi RS e-tron GT">
+                        <img src="/fotos/audi_rs_e-tron.webp" alt="Audi RS e-tron GT">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
@@ -421,7 +421,7 @@
                 <!-- Veículo 8 -->
                 <div class="car-card">
                     <div class="car-image">
-                        <img src="https://cdn.motor1.com/images/mgl/P3GZvL/s3/2022-porsche-911-gt3.jpg" alt="Porsche 911 GT3">
+                        <img src="/fotos/Porsche 911 GT3.jpg" alt="Porsche 911 GT3">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
@@ -450,7 +450,7 @@
                 <div class="car-card">
                     <div class="car-image">
                         <span class="tag tag-offer">Oferta</span>
-                        <img src="https://cdn.motor1.com/images/mgl/kJWJA/s3/2021-ford-bronco-2-door.jpg" alt="Ford Bronco">
+                        <img src="/fotos/Ford Bronco.webp" alt="Ford Bronco">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
@@ -478,7 +478,7 @@
                 <!-- Veículo 10 -->
                 <div class="car-card">
                     <div class="car-image">
-                        <img src="https://cdn.motor1.com/images/mgl/qkqvL/s3/2021-toyota-land-cruiser.jpg" alt="Toyota Land Cruiser">
+                        <img src="/fotos/Toyota Land Cruiser.webp" alt="Toyota Land Cruiser">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
@@ -507,7 +507,7 @@
                 <div class="car-card">
                     <div class="car-image">
                         <span class="tag">Novo</span>
-                        <img src="https://cdn.motor1.com/images/mgl/ZnmOqL/s3/2023-range-rover-sport.jpg" alt="Range Rover Sport">
+                        <img src="/fotos/Range Rover Sport.jpg" alt="Range Rover Sport">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
@@ -536,7 +536,7 @@
                 <div class="car-card">
                     <div class="car-image">
                         <span class="tag tag-offer">Oferta</span>
-                        <img src="https://cdn.motor1.com/images/mgl/2NLbZ/s3/2021-hyundai-tucson.jpg" alt="Hyundai Tucson">
+                        <img src="/fotos/Hyundai Tucson.jpg" alt="Hyundai Tucson">
                         <div class="car-actions">
                             <button class="car-action-btn"><i class="far fa-heart"></i></button>
                             <button class="car-action-btn"><i class="fas fa-exchange-alt"></i></button>
