pagina contatos criada e mudanca no cabecario

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,25 +12,24 @@
 <header>
     <div class="container">
         <div class="logo">
-            <img src="/fotos/Captura de tela 2025-03-22 135902.png" alt="Logo">
+            <h1>Auto<span>Elite</span></h1>
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="active">Início</a></li>
-                <li><a href="veiculos.html">Veículos</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="veiculos.html" class="active">Veículos</a></li>
                 <li><a href="#">Serviços</a></li>
-                <li><a href="#">Financiamento</a></li>
-                <li><a href="#">Sobre Nós</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contatos.html">Contato</a></li>
             </ul>
         </nav>
-        <div class="header-buttons">
-            <a href="#" class="btn btn-outline">Agendar Test Drive</a>
-            <a href="/pages/autenticacao.html" class="btn btn-secondary">Login</a>
-            <a href="#" class="btn btn-primary">Cadastrar</a>
+        <div class="login-button">
+            <a href="/pages/autenticacao.html" class="btn-login">
+                <i class="fas fa-user"></i> Login
+            </a>
         </div>
     </div>
 </header>
+
 
 <!-- Hero Section -->
 <section class="hero">
