--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -19,20 +19,17 @@
                     <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html" class="active">Veículos</a></li>
                     <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Financiamento</a></li>
-                    <li><a href="#">Sobre Nós</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
                 </ul>
             </nav>
-            <div class="header-actions">
-                <a href="#" class="btn btn-outline">Agendar Test Drive</a>
-                <div class="auth-buttons">
-                    <a href="/pages/autenticacao.html" class="btn-auth login"><i class="fas fa-user"></i></a>
-                    <a href="#" class="btn-auth register">Cadastrar</a>
-                </div>
+            <div class="login-button">
+                <a href="/pages/autenticacao.html" class="btn-login">
+                    <i class="fas fa-user"></i> Login
+                </a>
             </div>
         </div>
     </header>
+
 
     <!-- Resto do conteúdo permanece igual -->
     <!-- Page Title -->
