--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
-                    <li><a href="#">Serviços</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html" class="active">Contato</a></li>
                 </ul>
             </nav>
@@ -232,7 +232,7 @@
                     <ul>
                         <li><a href="index.html">Início</a></li>
                         <li><a href="veiculos.html">Veículos</a></li>
-                        <li><a href="#">Serviços</a></li>
+                        <li><a href="servicos.html">Serviços</a></li>
                         <li><a href="#">Financiamento</a></li>
                         <li><a href="#">Sobre Nós</a></li>
                         <li><a href="contatos.html">Contato</a></li>
