--- a/pages/index.html
+++ b/pages/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="veiculos.html" class="active">Veículos</a></li>
-                <li><a href="#">Serviços</a></li>
+                <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contatos.html">Contato</a></li>
             </ul>
         </nav>
