--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -273,25 +273,55 @@
         </section>
     </main>
     <footer>
-        <div class="footer-content footer-alter">
-          <div class="footer-section">
-            <h3>AutoElite</h3>
-            <p>Sua concessionária de confiança desde 2010</p>
-          </div>
-          <div class="footer-section">
-            <h3>Contato</h3>
-            <p><i class="fas fa-phone"></i> (11) 3456-7890</p>
-            <p><i class="fas fa-envelope"></i> contato@autoelite.com.br</p>
-          </div>
-          <div class="footer-section">
-            <h3>Horário de Funcionamento</h3>
-            <p><i class="fas fa-clock"></i> Segunda a Sexta: 8h às 19h</p>
-            <p><i class="fas fa-calendar"></i> Sábados: 9h às 16h</p>
-          </div>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-about">
+                    <h3>Auto<span>Elite</span></h3>
+                    <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+                <div class="footer-links">
+                    <h4>Links Rápidos</h4>
+                    <ul>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="veiculos.html">Veículos</a></li>
+                        <li><a href="#">Serviços</a></li>
+                        <li><a href="#">Financiamento</a></li>
+                        <li><a href="#">Sobre Nós</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </div>
+                <div class="footer-contact">
+                    <h4>Contato</h4>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> Av. Brasil, 1500 - São Paulo, SP</li>
+                        <li><i class="fas fa-phone"></i> (11) 3456-7890</li>
+                        <li><i class="fas fa-envelope"></i> contato@autoelite.com.br</li>
+                        <li><i class="fas fa-clock"></i> Seg-Sex: 8h às 18h | Sáb: 9h às 14h</li>
+                    </ul>
+                </div>
+                <div class="footer-newsletter">
+                    <h4>Newsletter</h4>
+                    <p>Receba nossas ofertas e novidades por e-mail</p>
+                    <form class="newsletter-form">
+                        <input type="email" placeholder="Seu e-mail">
+                        <button type="submit" class="btn">Assinar</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2023 AutoElite. Todos os direitos reservados.</p>
+                <div class="footer-bottom-links">
+                    <a href="#">Política de Privacidade</a>
+                    <a href="#">Termos de Uso</a>
+                </div>
+            </div>
         </div>
-        <div class="footer-bottom">
-          <p>&copy; 2024 AutoElite. Todos os direitos reservados.</p>
-        </div>
-      </footer>
+    </footer>
 </body>
 </html>
