--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -117,6 +117,7 @@
                                 <option value="300000">R$ 300.000</option>
                                 <option value="500000">R$ 500.000</option>
                                 <option value="1000000">R$ 1.000.000</option>
+                                <option value="2000000">R$ 2.000.000</option>
                             </select>
                         </div>
                     </div>
