--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="veiculos.html" class="active">Veículos</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
                 </ul>
