--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="contatos.html" class="active">Contato</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
                 </ul>
             </nav>
             <div class="login-button">
