css construçao arrumado,link na pagina inicial

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,8 +37,8 @@
         <h1>Encontre o carro dos seus sonhos</h1>
         <p>Qualidade, confiança e as melhores condições do mercado</p>
         <div class="hero-buttons">
-            <a href="#" class="btn btn-primary">Ver Ofertas</a>
-            <a href="#" class="btn btn-secondary">Fale Conosco</a>
+            <a href="./veiculos.html" class="btn btn-primary">Ver Ofertas</a>
+            <a href="./contatos.html" class="btn btn-secondary">Fale Conosco</a>
         </div>
     </div>
 </section>
