--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="/pages/styles.css">
     <link rel="stylesheet" href="servicos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,7 +24,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Início</a></li>
+                    <li class=""><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
@@ -37,11 +43,14 @@
                 <h2>Serviços</h2>
                 <p>
                     Realize a manutenção do seu veículo com os serviços automotivos da Auto Elite.
-                    A Auto Elite tem tudo o que você precisa para garantir que você dirija com segurança e tranquilidade.
-                    Contamos com uma ampla oferta de serviços de manutenção e reparação para deixar seu carro sempre novo.
+                    A Auto Elite tem tudo o que você precisa para garantir que você dirija com segurança e
+                    tranquilidade.
+                    Contamos com uma ampla oferta de serviços de manutenção e reparação para deixar seu carro sempre
+                    novo.
                     Agende um horário para realizar a manutenção e fazer a revisão completa do seu carro. Na
                     revendedora Auto Elite garantimos o melhor serviço com excelente atendimento.
-                    Consulte-nos para descobrir como economizar sem abrir mão da qualidade. Conheça os serviços Auto Elite.
+                    Consulte-nos para descobrir como economizar sem abrir mão da qualidade. Conheça os serviços Auto
+                    Elite.
                 </p>
             </article>
 
@@ -51,7 +60,8 @@
                 </button>
             </div>
 
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353517486489731094/mecanico-reparando-veiculo.png?ex=67e1f0e3&is=67e09f63&hm=8b65e0c2567d52755cbb35b9a18f27482e695a967b61661367c77e4d825e0d19&" alt="">
+            <img src="../fotos/1.png"
+                alt="">
             <article>
                 <h2>Clínica de Serviços</h2>
                 <p>
@@ -59,29 +69,36 @@
                     incluem check up e revisões para garantir a segurança de nossos clientes ao dirigir.
                 </p>
             </article>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353517847925620828/image.png?ex=67e1f13a&is=67e09fba&hm=0ea83ea7e0b9d5e0aa455e63411f130af0bfd64518ab6abb36ca8f50dfcf7f06&" alt="">
+            <img src="../fotos/2.png"
+                alt="">
             <article>
                 <h2>Revisão Auto Elite</h2>
                 <p>
                     Atenção às necessidades do seu carro para que ele esteja sempre novo.
-                    Para valorizar seu automóvel, manter a garantia de fábrica e o desempenho perfeito, é essencial fazer as
+                    Para valorizar seu automóvel, manter a garantia de fábrica e o desempenho perfeito, é essencial
+                    fazer as
                     revisões recomendadas pela montadora nos prazos indicados.
                     A Sempre tem o plano de manutenção adequado ao seu veículo, conforme manual do proprietário,
-                    acompanhando todas as recomendações dentro de checagem/substituições nos intervalos de 10mil km ou 12
+                    acompanhando todas as recomendações dentro de checagem/substituições nos intervalos de 10mil km ou
+                    12
                     meses.
                 </p>
             </article>
             <article>
                 <h2>Manutenção Preventiva</h2>
                 <p>
-                    A Manutenção Preventiva é importante para ter seu veículo sempre nas melhores condições de uso para sua
-                    segurança e de seus familiares. Os Kits Instalados Auto Elite são pacotes de serviços para a manutenção
+                    A Manutenção Preventiva é importante para ter seu veículo sempre nas melhores condições de uso para
+                    sua
+                    segurança e de seus familiares. Os Kits Instalados Auto Elite são pacotes de serviços para a
+                    manutenção
                     preventiva ou corretiva do seu veículo. Ao realizar o serviço, você tem garantia de 1 ano nas peças,
                     aproveita a qualidade e ainda a conveniência de agendar o seu horário de atendimento.
                 </p>
             </article>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353517937457102918/lubrificantes.png?ex=67e1f14f&is=67e09fcf&hm=fc037fc04744e0f123fedcbbb861bc688f60ffa884a718230eb58e49943151cc&" alt="">
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353517964019892315/funilaria-e-pintura.png?ex=67e1f155&is=67e09fd5&hm=faded5b736cb2d231e62b4ffa5c19821195e0d360bc813475854556bf69e07dd&" alt="">
+            <img src="../fotos/3.png"
+                alt="">
+            <img src="../fotos/4.png"
+                alt="">
             <article>
                 <h2>Lubrificantes Automotivos</h2>
                 <p>
@@ -89,24 +106,28 @@
                     A Auto Elite recomenda lubrificantes específicos para cada tipo de motor, desenvolvidos com os mais
                     rigorosos padrões de qualidade e tecnologia de ponta, atendendo às especificações técnicas e agindo
                     ativamente na manutenção do seu veículo.
-                    Faça a troca de óleo dos períodos indicados pela marca de seu carro e mantenha o bom funcionamento do
+                    Faça a troca de óleo dos períodos indicados pela marca de seu carro e mantenha o bom funcionamento
+                    do
                     motor além de economizar combustível.
                 </p>
             </article>
             <div class="service-button">
-            <button>
-                Agendar Serviço.
-            </button>
-        </div>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353517989097508975/troca-de-pneus.png?ex=67e1f15b&is=67e09fdb&hm=ad0faebded720af1ed8f0508947fa4749983a5e8582145180d0533edc061ee6f&" alt="">
+                <button>
+                    Agendar Serviço.
+                </button>
+            </div>
+            <img src="../fotos/5.png"
+                alt="">
             <article>
                 <h2>Funilaria e Pintura</h2>
                 <p>
                     Seu carro sempre novo para você aqui na Auto Elite.
-                    Seu carro sempre novo com serviços de funilaria e pintura da nossa rede. Os melhores profissionais do
+                    Seu carro sempre novo com serviços de funilaria e pintura da nossa rede. Os melhores profissionais
+                    do
                     mercado vão deixar seu carro como novo, temos os melhores serviços de estética automotivo e auto
                     detailing.
-                    O atendimento exclusivo também deixa tudo mais fácil. Seu carro pode ficar pronto em, no máximo, duas
+                    O atendimento exclusivo também deixa tudo mais fácil. Seu carro pode ficar pronto em, no máximo,
+                    duas
                     horas.
                 </p>
             </article>
@@ -115,17 +136,20 @@
                     Agendar Serviço.
                 </button>
             </div>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353518014653403177/alinhamento-e-balanceamento.png?ex=67e1f161&is=67e09fe1&hm=c15e3049bd3d80c861c507970d6cab945539928f95c5bad5c067bd5381b3241e&" alt="">
+            <img src="../fotos/6.png"
+                alt="">
             <article>
                 <h2>Troca de Pneus</h2>
                 <p>
                     Troque seu Pneu com a Auto Elite e mantenha seu carro seguro.
-                    Os pneus são um dos principais itens de segurança do seu veículo, para evitar problemas maiores, devemos
+                    Os pneus são um dos principais itens de segurança do seu veículo, para evitar problemas maiores,
+                    devemos
                     ficar sempre atentos às condições de desgaste:
                     Se os cabos e/ou tecidos estiverem à mostra.
                     Se a banda de rolagem ou flanco estiver rachado ou com corte profundo.
                     Se há algum calo ou protuberância.
-                    Por isso a Auto Elite está pronta para lhe atender para a troca do seu pneu. Aqui você encontra tudo o
+                    Por isso a Auto Elite está pronta para lhe atender para a troca do seu pneu. Aqui você encontra tudo
+                    o
                     que precisa para rodar tranquilo.
                 </p>
             </article>
@@ -134,13 +158,15 @@
                     Agendar Serviço.
                 </button>
             </div>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353518444552781844/photo-1532004252750-b411a84c8a41.png?ex=67e1f1c8&is=67e0a048&hm=8dfac1ee926676c64682f8f6d3112e4b35e6496c96d45ddddd7118019eeba105&" alt="">
+            <img src="../fotos/7.png"
+                alt="">
             <article>
                 <h2>Alinhamento e Balanceamento</h2>
                 <p>
                     Quer ter o melhor desempenho no seu veículo e o menor desgaste nos pneus?
                     É simples! Mantenha o alinhamento e o balanceamento corretos dos pneus e siga as dicas de manutenção
-                    presentes no manual do proprietário e no manual do fabricante do pneu. Estes cuidados fazem com que os
+                    presentes no manual do proprietário e no manual do fabricante do pneu. Estes cuidados fazem com que
+                    os
                     pneus e vários outros itens de segurança e estrutura do seu veículo não sofram nenhum desgaste
                     prematuro.
                     Por isso a Auto Elite está pronta para lhe atender, aqui você encontra tudo o que precisa para rodar
@@ -154,11 +180,15 @@
             </div>
             <article>
                 <h2>Garantia Estendida</h2>
-                <p>Quer ter a tranquilidade de contar com a proteção e segurança para você e o seu carro por um período de
+                <p>Quer ter a tranquilidade de contar com a proteção e segurança para você e o seu carro por um período
+                    de
                     até 5 anos?
-                    O Seguro Proteção Mecânica Auto Elite é o produto certo. Com ele, a garantia de fábrica do seu Chevrolet
-                    pode ser estendida por um período total de até 5 anos. Com esse serviço você garante economia para casos
-                    de imprevistos com o seu carro durante o período estendido, realizando eventuais reparos em nossa loja
+                    O Seguro Proteção Mecânica Auto Elite é o produto certo. Com ele, a garantia de fábrica do seu
+                    Chevrolet
+                    pode ser estendida por um período total de até 5 anos. Com esse serviço você garante economia para
+                    casos
+                    de imprevistos com o seu carro durante o período estendido, realizando eventuais reparos em nossa
+                    loja
                     sempre com peças de fabrica e mão de obra gratuita para os itens cobertos.
                 </p>
             </article>
@@ -196,7 +226,8 @@
                     <li>Sistema de freios</li>
                 </ul>
             </article>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353521368242720878/4ac34e95-6dd6-4478-945c-d6584846bdc2.jpg?ex=67e1f481&is=67e0a301&hm=70527028fb625459f21d33a48c31c806c7c56f76fa3b57c5d0fbd068f2141df7&" alt="">
+            <img src="../fotos/8.png"
+                alt="">
             <div id="financiamento">
                 <h2>Financiamento</h2>
                 <button>
@@ -208,7 +239,8 @@
                     O melhor caminho para você chegar até o seu carro 0KM.
                 </p>
                 <p>
-                    A Auto Elite Serviços Financeiros procura desenvolver soluções que se encaixem ao seu perfil, sempre atentos às suas necessidades. Ajudamos você a conquistar o seu sonho
+                    A Auto Elite Serviços Financeiros procura desenvolver soluções que se encaixem ao seu perfil, sempre
+                    atentos às suas necessidades. Ajudamos você a conquistar o seu sonho
                 </p>
                 <p>
                     Confira os produtos e serviços da Auto Elite Serviços Financeiros abaixo:
@@ -236,12 +268,16 @@
             </article>
             <article>
                 <p>
-                    Use o próprio veículo para quitar a parcela final e aproveite o saldo para dar de entrada em um novo.</p>
+                    Use o próprio veículo para quitar a parcela final e aproveite o saldo para dar de entrada em um
+                    novo.</p>
                 <p>
-                Assim você paga parcelas mensais menores do que em um financiamento regular e ainda pode trocar de carro ao final do contrato, mantendo sua garagem sempre renovada. Venha até uma de nossas lojas fazer uma simulação.
+                    Assim você paga parcelas mensais menores do que em um financiamento regular e ainda pode trocar de
+                    carro ao final do contrato, mantendo sua garagem sempre renovada. Venha até uma de nossas lojas
+                    fazer uma simulação.
                 </p>
             </article>
-            <img src="https://cdn.discordapp.com/attachments/1353515214959677460/1353519042799075549/retrato-de-mulher-morena-em-seu-carro_23-2148958808.png?ex=67e1f256&is=67e0a0d6&hm=943620cfdac36b9c085ab46f9e60fd540fa0fd15e3de2678fa20bfb19e731333&" alt="">
+            <img src="../fotos/9.png"
+                alt="">
             <article>
                 <h3>Quer começar a pagar daqui a 2, 3 ou 4 meses? Aqui quem escolhe é você.</h3>
                 <p>
@@ -324,4 +360,5 @@
         </div>
     </footer>
 </body>
+
 </html>
