--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -60,8 +60,8 @@
                 </button>
             </div>
 
-            <img src="../fotos/1.png"
-                alt="">
+            <img src="../fotos/Serviços.png"
+                alt="Serviços">
             <article>
                 <h2>Clínica de Serviços</h2>
                 <p>
@@ -69,8 +69,8 @@
                     incluem check up e revisões para garantir a segurança de nossos clientes ao dirigir.
                 </p>
             </article>
-            <img src="../fotos/2.png"
-                alt="">
+            <img src="../fotos/Clínica de Serviços.png"
+                alt="Clinica de Serviços">
             <article>
                 <h2>Revisão Auto Elite</h2>
                 <p>
@@ -95,10 +95,10 @@
                     aproveita a qualidade e ainda a conveniência de agendar o seu horário de atendimento.
                 </p>
             </article>
-            <img src="../fotos/3.png"
-                alt="">
-            <img src="../fotos/4.png"
-                alt="">
+            <img src="../fotos/Revisão Auto Elite.png"
+                alt="Revisão Auto Elite">
+            <img src="../fotos/Manutenção Preventiva.png"
+                alt="Manutenção">
             <article>
                 <h2>Lubrificantes Automotivos</h2>
                 <p>
@@ -116,8 +116,8 @@
                     Agendar Serviço.
                 </button>
             </div>
-            <img src="../fotos/5.png"
-                alt="">
+            <img src="../fotos/Lubrificantes Automotivos.png"
+                alt="Lubrificantes Automotivos">
             <article>
                 <h2>Funilaria e Pintura</h2>
                 <p>
@@ -136,8 +136,8 @@
                     Agendar Serviço.
                 </button>
             </div>
-            <img src="../fotos/6.png"
-                alt="">
+            <img src="../fotos/Funilaria e Pintura.png"
+                alt="Funilaria e Pintura">
             <article>
                 <h2>Troca de Pneus</h2>
                 <p>
@@ -158,8 +158,8 @@
                     Agendar Serviço.
                 </button>
             </div>
-            <img src="../fotos/7.png"
-                alt="">
+            <img src="../fotos/Troca de Pneus.png"
+                alt="Troca de Pneus">
             <article>
                 <h2>Alinhamento e Balanceamento</h2>
                 <p>
@@ -226,8 +226,8 @@
                     <li>Sistema de freios</li>
                 </ul>
             </article>
-            <img src="../fotos/8.png"
-                alt="">
+            <img src="../fotos/Garantia Estendida.png"
+                alt="Garantia Estendida">
             <div id="financiamento">
                 <h2>Financiamento</h2>
                 <button>
@@ -276,8 +276,8 @@
                     fazer uma simulação.
                 </p>
             </article>
-            <img src="../fotos/9.png"
-                alt="">
+            <img src="../fotos/Financiamento.png"
+                alt="Financiamento">
             <article>
                 <h3>Quer começar a pagar daqui a 2, 3 ou 4 meses? Aqui quem escolhe é você.</h3>
                 <p>
