--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Header (mesmo da página inicial) -->
     <header>
@@ -29,18 +31,6 @@
             </div>
         </div>
     </header>
-
-
-    <!-- Resto do conteúdo permanece igual -->
-    <!-- Page Title -->
-    <section class="page-title">
-        <div class="container">
-            <h1>Nossos Veículos</h1>
-            <div class="breadcrumb">
-                <a href="index.html">Início</a> / <span>Veículos</span>
-            </div>
-        </div>
-    </section>
 
     <!-- Filters Section -->
     <section class="filters-section">
@@ -72,6 +62,11 @@
                         <label for="filter-modelo">Modelo</label>
                         <select id="filter-modelo">
                             <option value="">Todos os modelos</option>
+                            <option value="">1</option>
+                            <option value="">2</option>
+                            <option value="">3</option>
+                            <option value="">4</option>
+                            <option value="">5</option>
                         </select>
                     </div>
                     <div class="filter-group">
@@ -79,22 +74,22 @@
                         <div class="range-inputs">
                             <select id="filter-ano-min">
                                 <option value="">Mínimo</option>
-                                <option value="2018">2018</option>
-                                <option value="2019">2019</option>
-                                <option value="2020">2020</option>
-                                <option value="2021">2021</option>
-                                <option value="2022">2022</option>
-                                <option value="2023">2023</option>
+                                <option value="2018">2014</option>
+                                <option value="2019">2015</option>
+                                <option value="2020">2016</option>
+                                <option value="2021">2017</option>
+                                <option value="2022">2018</option>
+                                <option value="2023">2019</option>
                             </select>
                             <span>até</span>
                             <select id="filter-ano-max">
                                 <option value="">Máximo</option>
-                                <option value="2018">2018</option>
-                                <option value="2019">2019</option>
-                                <option value="2020">2020</option>
-                                <option value="2021">2021</option>
-                                <option value="2022">2022</option>
-                                <option value="2023">2023</option>
+                                <option value="2018">2020</option>
+                                <option value="2019">2021</option>
+                                <option value="2020">2022</option>
+                                <option value="2021">2023</option>
+                                <option value="2022">2024</option>
+                                <option value="2023">2025</option>
                             </select>
                         </div>
                     </div>
@@ -192,16 +187,19 @@
         <div class="container">
             <div class="listing-header">
                 <div class="results-count">
-                    <p>Exibindo <strong>24</strong> de <strong>68</strong> veículos</p>
+                    <p>Exibindo <strong>12</strong> de <strong>60</strong> veículos</p>
                 </div>
                 <div class="sorting">
                     <label for="sort-by">Ordenar por:</label>
                     <select id="sort-by">
                         <option value="relevancia">Relevância</option>
-                        <option value="preco-asc">Preço (menor para maior)</option>
-                        <option value="preco-desc">Preço (maior para menor)</option>
-                        <option value="ano-desc">Ano (mais recente)</option>
-                        <option value="km-asc">Quilometragem (menor)</option>
+                        <option value="preco-asc">Preço (Menor para maior)</option>
+                        <option value="preco-desc">Preço (Maior para menor)</option>
+                        <option value="ano-desc">Ano (Menor para maior)</option>
+                        <option value="ano-desc">Ano (Maior para menor)</option>
+                        <option value="km-asc">Quilometragem (0KM)</option>
+                        <option value="km-asc">Quilometragem (Acima de 5000 KM)</option>
+                        <option value="km-asc">Quilometragem (Menor que 50000 KM)</option>
                     </select>
                 </div>
                 <div class="view-options">
@@ -626,6 +624,7 @@
             </div>
         </div>
     </footer>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
-</html>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+</body>
 
+</html>
