criaçao das paginas detalhes e html crud

--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -290,7 +290,7 @@
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
                             <span><i class="fas fa-car"></i> 4 portas</span>
-                            <span><i class="fas fa-palette"></i> Branco</span>
+                            <span><i class="fas fa-palette"></i> Vermelho</span>
                         </div>
                         <div class="car-price">
                             <span class="price">R$ 280.000</span>
