Feat: Implementada função de bufferToBase64 resolvendo foto do usuario

--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -27,12 +27,14 @@
                     <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
-            <div class="login-button">
-                <a href="/pages/autenticacao.html" class="btn-login">
+            <div class="login-button" id="user-info">
+                <!-- Será preenchido via JavaScript -->
+                <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
                     <i class="fas fa-user"></i> Login
+                    <div id="user-info" class="user-info"></div>
+    
                 </a>
             </div>
-        </div>
     </header>
 
     <!-- Breadcrumb -->
@@ -76,7 +78,7 @@
                                     </div>
                                 </td>
                                 <td>Afonso Muller</td>
-                                <td>Afonso.patriota@autoelite.com.br</td>
+                                <td>afonso.patriota@autoelite.com.br</td>
                                 <td><span class="role-badge admin">Administrador</span></td>
                                 <td class="actions-cell">
                                     <div class="action-buttons">
@@ -417,6 +419,7 @@
             });
         });
     </script>
+    <script src="/pages/routes/sessao.js" defer></script>
 </body>
 
 </html>
