--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -132,14 +132,38 @@
           <h4>Links Rápidos</h4>
           <ul>
             <li><a href="index.html">Início</a></li>
-            <li><a href="veiculos.html">Veículos</a></li>
-            <li><a href="servicos.html">Serviços</a></li>
-            <li><a href="contatos.html">Contato</a></li>
+                        <li><a href="veiculos.html">Veículos</a></li>
+                        <li><a href="servicos.html">Serviços</a></li>
+                        <li><a href="contatos.html">Contato</a></li>
           </ul>
+        </div>
+        <div class="footer-contact">
+          <h4>Contato</h4>
+          <ul>
+            <li><i class="fas fa-map-marker-alt"></i> Av. Brasil, 1500 - São Paulo, SP</li>
+            <li><i class="fas fa-phone"></i> (11) 3456-7890</li>
+            <li><i class="fas fa-envelope"></i> contato@autoelite.com.br</li>
+            <li><i class="fas fa-clock"></i> Seg-Sex: 8h às 18h | Sáb: 9h às 14h</li>
+          </ul>
+        </div>
+        <div class="footer-newsletter">
+          <h4>Newsletter</h4>
+          <p>Receba nossas ofertas e novidades por e-mail</p>
+          <form class="newsletter-form">
+            <input type="email" placeholder="Seu e-mail">
+            <button type="submit" class="btn">Assinar</button>
+          </form>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
+        <div class="footer-bottom-links">
+          <a href="#">Política de Privacidade</a>
+          <a href="#">Termos de Uso</a>
         </div>
       </div>
     </div>
   </footer>
-
+  <script src="/pages/routes/sessao.js" defer></script>
 </body>
 </html>
