--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -87,6 +87,11 @@
               <span id="erroConfirmacao" class="erro"></span>
             </div>
 
+            <div class="form-group">
+              <label for="register-photo">Foto de Perfil</label>
+              <input type="file" id="register-photo" name="foto" accept="image/*" required>
+            </div>
+            
             <div class="form-options">
               <label class="terms-checkbox">
                 <input type="checkbox" id="terms" required>
