--- a/Carros/deatalhesBMW X3.html
+++ b/Carros/deatalhesBMW X3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercedes-Benz SL - AutoElite</title>
+    <title>BMW X3 - AutoElite</title>
     <link rel="stylesheet" href="/pages/styles.css">
     <link rel="stylesheet" href="/Carros/carrosdetalhes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -22,7 +22,8 @@
                     <li><a href="/pages/index.html">Início</a></li>
                     <li><a href="/pages/veiculos.html">Veículos</a></li>
                     <li><a href="/pages/servicos.html">Serviços</a></li>
-                    <li><a href="/pages/contatos.html">Contato</a></li>
+                    <li><a href="/pages/CRUDusuario.html">CRUusuario</a></li>
+                    <li><a href="/pages/CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
             <div class="login-button">
