--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -41,42 +41,41 @@
       <h2>Gerenciamento de Veículos</h2>
 
       <form>
-        <div class="form-group">
-          <label for="marca">Marca</label>
-          <input type="text" id="marca" name="marca" placeholder="Ex: Toyota" required />
-        </div>
-        <div class="form-group">
-          <label for="modelo">Modelo</label>
-          <input type="text" id="modelo" name="modelo" placeholder="Ex: Corolla" required />
-        </div>
-        <div class="form-group">
-          <label for="ano">Ano</label>
-          <input type="number" id="ano" name="ano" placeholder="Ex: 2023" required />
-        </div>
-        <div class="form-group">
-          <label for="preco">Preço</label>
-          <input type="number" id="preco" name="preco" placeholder="Ex: 150000" required />
-        </div>
-        <div class="form-group">
-            <label for="marca">Quilometragem</label>
-            <input type="text" id="quilometragem" name="quilometragem" placeholder="Ex: 25.000 km" required />
-        </div>
-        <div class="form-group">
-            <label for="marca">Combustível</label>
-            <input type="text" id="quilometragem" name="combustivel" placeholder="Ex: Gasolina" required />
-        </div>
-        <div class="form-group">
-            <label for="marca">Câmbio</label>
-            <input type="text" id="cambio" name="cambio" placeholder="Ex: Manual" required />
-        </div>
-        <div class="form-group">
-            <label for="marca">Condição</label>
-            <input type="text" id="condicao" name="condicao" placeholder="Ex: Usado" required />
-        </div>
-        
-        
-        <button type="submit" class="btn btn-primary">Adicionar Veículo</button>
-      </form>
+  <div class="form-group">
+    <label for="marca">Marca</label>
+    <input type="text" id="marca" name="marca" placeholder="Ex: Toyota" required />
+  </div>
+  <div class="form-group">
+    <label for="modelo">Modelo</label>
+    <input type="text" id="modelo" name="modelo" placeholder="Ex: Corolla" required />
+  </div>
+  <div class="form-group">
+    <label for="ano">Ano</label>
+    <input type="number" id="ano" name="ano" placeholder="Ex: 2023" required />
+  </div>
+  <div class="form-group">
+    <label for="preco">Preço</label>
+    <input type="number" id="preco" name="preco" placeholder="Ex: 150000" required />
+  </div>
+  <div class="form-group">
+    <label for="quilometragem">Quilometragem</label>
+    <input type="text" id="quilometragem" name="quilometragem" placeholder="Ex: 25.000 km" required />
+  </div>
+  <div class="form-group">
+    <label for="combustivel">Combustível</label>
+    <input type="text" id="combustivel" name="combustivel" placeholder="Ex: Gasolina" required />
+  </div>
+  <div class="form-group">
+    <label for="cambio">Câmbio</label>
+    <input type="text" id="cambio" name="cambio" placeholder="Ex: Manual" required />
+  </div>
+  <div class="form-group">
+    <label for="condicao">Condição</label>
+    <input type="text" id="condicao" name="condicao" placeholder="Ex: Usado" required />
+  </div>
+
+  <button type="submit" class="btn btn-primary">Adicionar Veículo</button>
+</form>
 
       <table>
         <thead>
@@ -117,53 +116,54 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="footer-grid">
-        <div class="footer-about">
-          <h3>Auto<span>Elite</span></h3>
-          <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
-          <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          </div>
+        <div class="footer-grid">
+            <div class="footer-about">
+                <h3>Auto<span>Elite</span></h3>
+                <p>Há mais de 15 anos oferecendo os melhores veículos e serviços para nossos clientes.</p>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-links">
+                <h4>Links Rápidos</h4>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
+                </ul>
+            </div>
+            <div class="footer-contact">
+                <h4>Contato</h4>
+                <ul>
+                    <li><i class="fas fa-map-marker-alt"></i> Av. Brasil, 1500 - São Paulo, SP</li>
+                    <li><i class="fas fa-phone"></i> (11) 3456-7890</li>
+                    <li><i class="fas fa-envelope"></i> contato@autoelite.com.br</li>
+                    <li><i class="fas fa-clock"></i> Seg-Sex: 8h às 18h | Sáb: 9h às 14h</li>
+                </ul>
+            </div>
+            <div class="footer-newsletter">
+                <h4>Newsletter</h4>
+                <p>Receba nossas ofertas e novidades por e-mail</p>
+                <form class="newsletter-form">
+                    <input type="email" placeholder="Seu e-mail">
+                    <button type="submit" class="btn">Assinar</button>
+                </form>
+            </div>
         </div>
-        <div class="footer-links">
-          <h4>Links Rápidos</h4>
-          <ul>
-            <li><a href="index.html">Início</a></li>
-                        <li><a href="veiculos.html">Veículos</a></li>
-                        <li><a href="servicos.html">Serviços</a></li>
-                        <li><a href="contatos.html">Contato</a></li>
-          </ul>
+        <div class="footer-bottom">
+            <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
+            <div class="footer-bottom-links">
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Termos de Uso</a>
+            </div>
         </div>
-        <div class="footer-contact">
-          <h4>Contato</h4>
-          <ul>
-            <li><i class="fas fa-map-marker-alt"></i> Av. Brasil, 1500 - São Paulo, SP</li>
-            <li><i class="fas fa-phone"></i> (11) 3456-7890</li>
-            <li><i class="fas fa-envelope"></i> contato@autoelite.com.br</li>
-            <li><i class="fas fa-clock"></i> Seg-Sex: 8h às 18h | Sáb: 9h às 14h</li>
-          </ul>
-        </div>
-        <div class="footer-newsletter">
-          <h4>Newsletter</h4>
-          <p>Receba nossas ofertas e novidades por e-mail</p>
-          <form class="newsletter-form">
-            <input type="email" placeholder="Seu e-mail">
-            <button type="submit" class="btn">Assinar</button>
-          </form>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
-        <div class="footer-bottom-links">
-          <a href="#">Política de Privacidade</a>
-          <a href="#">Termos de Uso</a>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
+
   <script src="/pages/routes/sessao.js" defer></script>
 </body>
 </html>
