--- a/Carros/detalhesMercedes-Benz.html
+++ b/Carros/detalhesMercedes-Benz.html
@@ -23,6 +23,8 @@
                     <li><a href="/pages/veiculos.html">Veículos</a></li>
                     <li><a href="/pages/servicos.html">Serviços</a></li>
                     <li><a href="/pages/contatos.html">Contato</a></li>
+                    <li><a href="/pages/CRUDusuario.html">CRUusuario</a></li>
+                    <li><a href="/pages/CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
             <div class="login-button">
