Alterações de nomes + ajustes
Alterações nome das colunas banco de dados

--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -28,10 +28,10 @@
         </ul>
       </nav>
       <div class="login-button">
-        <a href="/pages/autenticacao.html" class="btn-login">
-          <i class="fas fa-user"></i> Login
+        <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
         </a>
-      </div>
+        <div id="user-info" class="user-info"></div>
+    </div>
     </div>
   </header>
 
