Mudança de diretórios

--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AutoElite - CRUD Veículos</title>
-  <link rel="stylesheet" href="/pages/styles.css" />
-  <link rel="stylesheet" href="/pages/CRUDveiculos.css" />
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/CRUDveiculos.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
   
 </head>
@@ -28,7 +28,7 @@
         </ul>
       </nav>
       <div class="login-button">
-        <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+        <a href="/autenticacao.html" class="btn-login" id="login-link">
         </a>
         <div id="user-info" class="user-info"></div>
     </div>
@@ -164,6 +164,6 @@
     </div>
 </footer>
 
-  <script src="/pages/routes/sessao.js" defer></script>
+  <script src="/routes/sessao.js" defer></script>
 </body>
 </html>
