--- a/pages/autenticacao.html
+++ b/pages/autenticacao.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="AutoElite - Faça login ou crie sua conta." />
   <title>Login | AutoElite</title>
-  <link rel="stylesheet" href="/pages/styles.css" />
-  <link rel="stylesheet" href="/pages/autenticacao.css" />
+  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="/autenticacao.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 </head>
 <body>
@@ -43,7 +43,7 @@
               <a href="#" class="forgot-password" id="forgot-password-link">Esqueci minha senha</a>
             </div>
 
-            <button type="submit" class="btn-submit">Entrar</button>
+            <button type="submit" href="index.html" class="btn-submit">Entrar</button>
           </form>
         </div>
 
@@ -174,7 +174,7 @@
     </div>
   </footer>
 
-  <script src="/pages/routes/autenticacao.js"></script>
+  <script src="/routes/autenticacao.js"></script>
 </body>
 
 </html>
