--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -30,7 +30,7 @@
             </nav>
             <div class="login-button" id="user-info">
                 <!-- Será preenchido via JavaScript -->
-                <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+                <a href="/autenticacao.html" class="btn-login" id="login-link">
                     <i class="fas fa-user"></i> Login
                     <div id="user-info" class="user-info"></div>
     
@@ -294,7 +294,7 @@
             });
         });
     </script>
-    <script src="/pages/routes/sessao.js" defer></script>
+    <script src="/routes/sessao.js" defer></script>
 </body>
 
 </html>
