--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Usuários - AutoElite</title>
-    <link rel="stylesheet" href="/pages/styles.css">
-    <link rel="stylesheet" href="/pages/CRUDusuario.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/CRUDusuario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
             <div class="login-button">
-                <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+                <a href="/autenticacao.html" class="btn-login" id="login-link">
                 </a>
                 <div id="user-info" class="user-info"></div>
             </div>
@@ -39,7 +39,7 @@
     <div class="breadcrumb-container">
         <div class="container">
             <div class="breadcrumb">
-                <a href="/pages/index.html"><i class="fas fa-home"></i> Início</a> &gt;
+                <a href="/index.html"><i class="fas fa-home"></i> Início</a> &gt;
                 <a href="/admin/dashboard.html">Painel Admin</a> &gt;
                 <span>Gerenciamento de Usuários</span>
             </div>
@@ -174,10 +174,10 @@
                 <div class="footer-links">
                     <h4>Links Rápidos</h4>
                     <ul>
-                        <li><a href="/pages/index.html">Início</a></li>
-                        <li><a href="/pages/veiculos.html">Veículos</a></li>
-                        <li><a href="/pages/servicos.html">Serviços</a></li>
-                        <li><a href="/pages/contatos.html">Contato</a></li>
+                        <li><a href="/index.html">Início</a></li>
+                        <li><a href="/veiculos.html">Veículos</a></li>
+                        <li><a href="/servicos.html">Serviços</a></li>
+                        <li><a href="/contatos.html">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
@@ -207,7 +207,7 @@
             </div>
         </div>
     </footer>
-    <script src="/pages/routes/sessao.js" defer></script>
+    <script src="/routes/sessao.js" defer></script>
 </body>
 
 </html>
