--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AutoElite - Concessionária Premium</title>
-<link rel="stylesheet" href="/pages/styles.css">
+<link rel="stylesheet" href="/styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -16,17 +16,17 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Início</a></li>
-                    <li><a href="veiculos.html">Veículos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
-                    <li><a href="contatos.html">Contato</a></li>
-                    <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
-                    <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
+                <li><a href="/index.html">Início</a></li>
+                    <li><a href="/veiculos.html">Veículos</a></li>
+                    <li><a href="/servicos.html">Serviços</a></li>
+                    <li><a href="/contatos.html">Contato</a></li>
+                    <li id="CrudUsuario"><a href="/CRUDusuario.html">CRUDusuario</a></li>
+                    <li id="CrudVeiculos"><a href="/CRUDveiculos.html">CRUDveiculos</a></li>
             </ul>
         </nav>
         <div class="login-button" id="user-info">
             <!-- Será preenchido via JavaScript -->
-            <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+            <a href="/autenticacao.html" class="btn-login" id="login-link">
                 <i class="fas fa-user"></i> Login
                 <div id="user-info" class="user-info"></div>
 
@@ -41,7 +41,7 @@
         <h1>Encontre o carro dos seus sonhos</h1>
         <p>Qualidade, confiança e as melhores condições do mercado</p>
         <div class="hero-buttons">
-            <a href="./veiculos.html" class="btn btn-primary">Ver Ofertas</a>
+            <a href="/veiculos.html" class="btn btn-primary">Ver Ofertas</a>
             <a href="./contatos.html" class="btn btn-secondary">Fale Conosco</a>
         </div>
     </div>
@@ -417,7 +417,7 @@
         </div>
     </div>
 </footer>
-<script src="/pages/routes/sessao.js" defer></script>
+<script src="/routes/sessao.js" defer></script>
 
 </body>
 </html>
