--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviços</title>
-    <link rel="stylesheet" href="/pages/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="servicos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -34,7 +34,7 @@
             </nav>
             <div class="login-button" id="user-info">
                 <!-- Será preenchido via JavaScript -->
-                <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+                <a href="/autenticacao.html" class="btn-login" id="login-link">
                     <i class="fas fa-user"></i> Login
                     <div id="user-info" class="user-info"></div>
     
@@ -361,7 +361,7 @@
             </div>
         </div>
     </footer>
-    <script src="/pages/routes/sessao.js" defer></script>
+    <script src="/routes/sessao.js" defer></script>
 </body>
 
 
