--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -626,7 +626,7 @@
         </div>
     </footer>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="/routes/sessao.js" defer></script>
+    <script src="/routes/sessao.js" type="module" defer></script>
 </body>
 
 </html>
