Alterações CRUD e tela Login

--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -118,8 +118,7 @@
                         <select id="user-role" name="role">
                             <option value="">Selecione uma função</option>
                             <option value="Administrador">Administrador</option>
-                            <option value="Gerente">Gerente</option>
-                            <option value="Vendedor">Vendedor</option>
+                            <option value="Cliente">Cliente</option>
                         </select>
                     </div>
                 </div>
