--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -28,7 +28,7 @@
             </nav>
             <div class="login-button" id="user-info">
                 <!-- Será preenchido via JavaScript -->
-                <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
+                <a href="/autenticacao.html" class="btn-login" id="login-link">
                     <i class="fas fa-user"></i> Login
                     <div id="user-info" class="user-info"></div>
                 </a>
